--- a/index.html
+++ b/index.html
@@ -16,71 +16,87 @@
     <link rel="stylesheet" href="./css/styles.css" />
   </head>
   <body>
-    <header>
-      <nav>
-        <a href="./index.html">WebStudio</a>
-        <ul>
-          <li><a href="./index.html">Студия</a></li>
-          <li><a href="#">Портфолио</a></li>
-          <li><a href="#">Контакты</a></li>
+    <!--Header section-->
+    <header class="header">
+      <a class="logo" href="./index.html">WebStudio</a>
+      <nav class="header-nav">
+        <ul class="header-list">
+          <li class="header-item"><a class="header-link" href="./index.html">Студия</a></li>
+          <li class="header-item"><a class="header-link" href="#">Портфолио</a></li>
+          <li class="header-item"><a class="header-link" href="#">Контакты</a></li>
         </ul>
       </nav>
-      <ul>
-        <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-        <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+      <ul class="heder-list">
+        <li class="header-item">
+          <a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        </li>
+        <li class="header-item">
+          <a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+        </li>
       </ul>
     </header>
+    <!--Main section-->
     <main>
-      <section>
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+      <!--Hero section-->
+      <section class="hero">
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="hero-btm" type="button">Заказать услугу</button>
       </section>
-      <section>
-        <h2>Наши особенности</h2>
-        <ul>
-          <li>
-            <h3>Внимание к деталям</h3>
-            <p>Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+      <!--About section-->
+      <section class="about">
+        <h2 hidden>Про нас</h2>
+        <ul class="about-list">
+          <li class="about-item">
+            <h3 class="about-subtitle">Внимание к деталям</h3>
+            <p class="about-desc">
+              Идейные соображения, а также начало повседневной работы по формированию позиции.
+            </p>
           </li>
-          <li>
-            <h3>Пунктуальность</h3>
-            <p>
+          <li class="about-item">
+            <h3 class="about-subtitle">Пунктуальность</h3>
+            <p class="about-desc">
               Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
             </p>
           </li>
-          <li>
-            <h3>Планирование</h3>
-            <p>
+          <li class="about-item">
+            <h3 class="about-subtitle">Планирование</h3>
+            <p class="about-desc">
               Равным образом консультация с широким активом в значительной степени обуславливает.
             </p>
           </li>
-          <li>
-            <h3>Современные технологии</h3>
-            <p>Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          <li class="about-item">
+            <h3 class="about-subtitle">Современные технологии</h3>
+            <p class="about-desc">
+              Значимость этих проблем настолько очевидна, что реализация плановых заданий.
+            </p>
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Чем мы занимаемся</h2>
-        <ul>
-          <li>
+      <!-Work section-->
+      <section class="Work">
+        <h2 class="section-title">Чем мы занимаемся</h2>
+        <ul class="work-list">
+          <li class="work-item">
             <img
+              class="work-img"
               src="./images/What_do_we_do/img-1.jpg"
               alt="Робота за комп'ютером"
               width="370"
               height="294"
             />
           </li>
-          <li>
+          <li class="work-item">
             <img
+              class="work-img"
               src="./images/What_do_we_do/img-2.jpg"
               alt="Розработка приложения"
               width="370"
               height="294"
             />
           </li>
-          <li>
+          <li class="work-item">
             <img
+              class="work-img"
               src="./images/What_do_we_do/img-3.jpg"
               alt="Роота за планшетом"
               width="370"
@@ -89,51 +105,77 @@
           </li>
         </ul>
       </section>
-      <section>
-        <h2>Наша команда</h2>
-        <ul>
-          <li>
+      <!-Team section-->
+      <section class="team">
+        <h2 class="section-title">Наша команда</h2>
+        <ul class="team-list">
+          <li class="team-item">
             <img
+              class="team-img"
               src="./images/our_team/img-1.jpg"
               alt="Игорь Демьяненко"
               width="270"
               height="260"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-subtitle">Игорь Демьяненко</h3>
+            <p class="team-desc">Product Designer</p>
           </li>
-          <li>
-            <img src="./images/our_team/img-2.jpg" alt="Ольга Репина" width="270" height="260" />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+          <li class="team-item">
+            <img
+              class="team-img"
+              src="./images/our_team/img-2.jpg"
+              alt="Ольга Репина"
+              width="270"
+              height="260"
+            />
+            <h3 class="team-subtitle">Ольга Репина</h3>
+            <p class="team-desc">Frontend Developer</p>
           </li>
-          <li>
-            <img src="./images/our_team/img-3.jpg" alt="Николай Тарасов" width="270" height="260" />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+          <li class="team-item">
+            <img
+              class="team-img"
+              src="./images/our_team/img-3.jpg"
+              alt="Николай Тарасов"
+              width="270"
+              height="260"
+            />
+            <h3 class="team-subtitle">Николай Тарасов</h3>
+            <p class="team-desc">Marketing</p>
           </li>
-          <li>
-            <img src="./images/our_team/img-4.jpg" alt="Михаил Ермаков" width="270" height="260" />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+          <li class="team-item">
+            <img
+              class="team-img"
+              src="./images/our_team/img-4.jpg"
+              alt="Михаил Ермаков"
+              width="270"
+              height="260"
+            />
+            <h3 class="team-subtitle">Михаил Ермаков</h3>
+            <p class="team-desc">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer>
-      <a href="./index.html">WebStudio</a>
+    <!--Footer section-->
+    <footer class="footer">
+      <a class="footer-link" href="./index.html">WebStudio</a>
       <address>
-        <ul>
-          <li>
+        <ul class="footer-list">
+          <li class="footer-item">
             <a
+              class="footer-addres"
               href="https://goo.gl/maps/m6pnY2zvGVCJ6Nes9"
               target="_blank"
               rel="noreferrer noopener"
               >г. Киев, пр-т Леси Украинки, 26</a
             >
           </li>
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li class="footer-item">
+            <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="footer-item">
+            <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
         </ul>
       </address>
     </footer>
