--- a/index.html
+++ b/index.html
@@ -18,20 +18,22 @@
   <body>
     <!--Header section-->
     <header class="header">
-      <a class="logo" href="./index.html">WebStudio</a>
+      <a class="logo-link link" href="./index.html" lang="en"
+        >Web<span class="logo-accent">Studio</span>
+      </a>
       <nav class="header-nav">
-        <ul class="header-list">
-          <li class="header-item"><a class="header-link" href="./index.html">Студия</a></li>
-          <li class="header-item"><a class="header-link" href="#">Портфолио</a></li>
-          <li class="header-item"><a class="header-link" href="#">Контакты</a></li>
+        <ul class="header-list list">
+          <li class="header-item"><a class="header-link link" href="./index.html">Студия</a></li>
+          <li class="header-item"><a class="header-link link" href="#">Портфолио</a></li>
+          <li class="header-item"><a class="header-link link" href="#">Контакты</a></li>
         </ul>
       </nav>
-      <ul class="heder-list">
+      <ul class="heder-list list">
         <li class="header-item">
-          <a class="header-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          <a class="header-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
         <li class="header-item">
-          <a class="header-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+          <a class="header-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
         </li>
       </ul>
     </header>
@@ -45,7 +47,7 @@
       <!--About section-->
       <section class="about">
         <h2 hidden>Про нас</h2>
-        <ul class="about-list">
+        <ul class="about-list list">
           <li class="about-item">
             <h3 class="about-subtitle">Внимание к деталям</h3>
             <p class="about-desc">
@@ -75,7 +77,7 @@
       <!-Work section-->
       <section class="Work">
         <h2 class="section-title">Чем мы занимаемся</h2>
-        <ul class="work-list">
+        <ul class="work-list list">
           <li class="work-item">
             <img
               class="work-img"
@@ -108,7 +110,7 @@
       <!-Team section-->
       <section class="team">
         <h2 class="section-title">Наша команда</h2>
-        <ul class="team-list">
+        <ul class="team-list list">
           <li class="team-item">
             <img
               class="team-img"
@@ -158,12 +160,12 @@
     </main>
     <!--Footer section-->
     <footer class="footer">
-      <a class="footer-link" href="./index.html">WebStudio</a>
+      <a class="footer-link link" href="./index.html">WebStudio</a>
       <address>
-        <ul class="footer-list">
+        <ul class="footer-list list">
           <li class="footer-item">
             <a
-              class="footer-addres"
+              class="footer-addres link"
               href="https://goo.gl/maps/m6pnY2zvGVCJ6Nes9"
               target="_blank"
               rel="noreferrer noopener"
@@ -171,10 +173,10 @@
             >
           </li>
           <li class="footer-item">
-            <a class="footer-mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+            <a class="footer-mail link" href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
           <li class="footer-item">
-            <a class="footer-tel" href="tel:+380961111111">+38 096 111 11 11</a>
+            <a class="footer-tel link" href="tel:+380961111111">+38 096 111 11 11</a>
           </li>
         </ul>
       </address>
