--- a/index.html
+++ b/index.html
@@ -23,7 +23,9 @@
       </a>
       <nav class="header-nav">
         <ul class="header-list list">
-          <li class="header-item"><a class="header-link link" href="./index.html">Студия</a></li>
+          <li class="header-item">
+            <a class="header-link header-link-current link" href="./index.html">Студия</a>
+          </li>
           <li class="header-item"><a class="header-link link" href="#">Портфолио</a></li>
           <li class="header-item"><a class="header-link link" href="#">Контакты</a></li>
         </ul>
