--- a/index.html
+++ b/index.html
@@ -162,7 +162,9 @@
     </main>
     <!--Footer section-->
     <footer class="footer">
-      <a class="footer-link link" href="./index.html">WebStudio</a>
+      <a class="logo-link link" href="./index.html" lang="en"
+        >Web<span class="logo-accent">Studio</span>
+      </a>
       <address>
         <ul class="footer-list list">
           <li class="footer-item">
