--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
           <li class="header-item">
             <a class="header-link header-link-current link" href="./index.html">Студия</a>
           </li>
-          <li class="header-item"><a class="header-link link" href="#">Портфолио</a></li>
+          <li class="header-item">
+            <a class="header-link link" href="./portfolio.html">Портфолио</a>
+          </li>
           <li class="header-item"><a class="header-link link" href="#">Контакты</a></li>
         </ul>
       </nav>
@@ -163,7 +165,7 @@
     <!--Footer section-->
     <footer class="footer">
       <a class="logo-link link" href="./index.html" lang="en"
-        >Web<span class="logo-accent">Studio</span>
+        >Web<span class="footer-logo-accent">Studio</span>
       </a>
       <address>
         <ul class="footer-list list">
