--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
           </li>
         </ul>
       </section>
-      <!-Work section-->
+      <!--Work section-->
       <section class="Work">
         <h2 class="section-title">Чем мы занимаемся</h2>
         <ul class="work-list list">
@@ -111,7 +111,7 @@
           </li>
         </ul>
       </section>
-      <!-Team section-->
+      <!--Team section-->
       <section class="team">
         <h2 class="section-title">Наша команда</h2>
         <ul class="team-list list">
