--- a/portfolio.html
+++ b/portfolio.html
@@ -44,7 +44,7 @@
     <!--Main section-->
     <main>
       <section class="projects">
-        <h1 hidden>Проекты</h1>
+        <h1 visually-hidden>Проекты</h1>
         <ul class="project-list-btn list">
           <li class="project-item-btn">
             <button class="projects-btn projects-btn-current" type="button">Все</button>
