--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </section>
       <!--About section-->
       <section class="about">
-        <h2 hidden>Про нас</h2>
+        <h2 class="visually-hidden">Про нас</h2>
         <ul class="about-list list">
           <li class="about-item">
             <h3 class="about-subtitle">Внимание к деталям</h3>
